# rsb

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
docs/: cli_help.md
rsb-cli/: Cargo.toml  build.rs
rsb-cli/src/: lib.rs
rsb-schema/: Cargo.toml  schema.yaml
rsb-schema/src/: lib.rs  model.rs
rsb-template/: Cargo.toml
rsb-template/src/: lib.rs
rsb-template/src/components/: head.rs  mod.rs  style.css
rsb-template/src/components/body/: basics.rs  education.rs  mod.rs
src/: config.rs  lib.rs  main.rs  template.rs
src/schema/: mod.rs  resume_schema_impl.rs  schema.json
