[workspace]
members = ["rsb-schema", "rsb-template"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["AvyChanna"]
rust-version = "1.80"
repository = "https://github.com/AvyChanna/rsb"
publish = false
description = "Create resumes from JsonResume structured data"
homepage = "https://github.com/AvyChanna/rsb"
license = "MIT"


[workspace.dependencies]
anyhow = "1.0.91"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
clap-markdown = "0.1.4"
json5 = "0.4.1"
jsonnet-rs = "0.17.0"
git2 = { version = "0.19.0", default-features = false }
log = "0.4.22"
hypertext = "0.5.1"
pretty_env_logger = "0.5.0"
regex = "1.11.1"
ron = "0.8.1"
serde = { version = "1.0.214", features = ["derive"] }
serde_yml = "0.0.12"
# workspace crates
rsb-schema = { path = "rsb-schema" }
rsb-template = { path = "rsb-template" }

[package]
name = "rsb"
build = "build.rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
description.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
anyhow.workspace = true
clap-markdown.workspace = true
clap.workspace = true
log.workspace = true
pretty_env_logger.workspace = true
rsb-schema.workspace = true
rsb-template.workspace = true

[build-dependencies]
anyhow.workspace = true
git2.workspace = true

[features]
ron = ["rsb-schema/ron"]
jsonnet = ["rsb-schema/jsonnet"]

[badges]
maintenance.status = "experimental"
