[package]
name = "rsb-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
homepage.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
anyhow.workspace = true
clap-markdown.workspace = true
clap.workspace = true
log.workspace = true
rsb-schema.workspace = true

[build-dependencies]
anyhow.workspace = true
git2.workspace = true