[package]
name = "rsb-schema"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
publish.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
json5.workspace = true
log.workspace = true
regex.workspace = true
serde_yml.workspace = true
serde.workspace = true

# optional deps
ron = { workspace = true, optional = true }
jsonnet-rs = { workspace = true, optional = true }

[features]
ron = ["dep:ron"]
jsonnet = ["dep:jsonnet-rs"]
